# eldr

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  compileShaders.sh  meson.build  meson_options.txt  setpath.sh  todo.txt
assets/shaders/: imgui.frag.spv  imgui.vert.spv  main.frag.spv  main.vert.spv  mesh.frag.spv  mesh.vert.spv
include/eldr/: app.hpp  buildinfo.hpp.in  config.hpp.in  eldr.hpp  gitinfo.hpp.in  meson.build
include/eldr/app/: app.hpp  fwd.hpp  keyboardmouseinput.hpp  scenemanager.hpp  window.hpp
include/eldr/arrays/: array.hpp  arraybase.hpp  arraygeneric.hpp  arrayiface.hpp  arraystatic.hpp  arrayutils.hpp  matrix.hpp  traits.hpp
include/eldr/core/: arrayutils.hpp  bitmap.hpp  common.hpp  config.hpp  core.hpp  dstream.hpp  exceptions.hpp  expect.hpp  flags.hpp  formatter.hpp  fstream.hpp  fwd.hpp  hash.hpp  logger.hpp  math.hpp  mstream.hpp  platform.hpp  progress.hpp  ray.hpp  sink.hpp  spectrum.hpp  stopwatch.hpp  stream.hpp  struct.hpp  thread.hpp  util.hpp  vector.hpp
include/eldr/gui/: gui.hpp  window.hpp
include/eldr/math/: array.hpp  arraybase.hpp  arraygeneric.hpp  arrayinterface.hpp  arrayrouter.hpp  arraystatic.hpp  arraytraits.hpp  arrayutils.hpp  fwd.hpp  glm.hpp  math.hpp  matrix.hpp  sphere.hpp  transform.hpp  vector.hpp
include/eldr/misc/: fastgltf.hpp
include/eldr/render/: camera.hpp  endpoint.hpp  fwd.hpp  mesh.hpp  renderer.hpp  scene.hpp  sensor.hpp  shape.hpp  vulkan-wrapper.hpp
include/eldr/vulkan/: buffer.hpp  command.hpp  commandpool.hpp  common.hpp  config.hpp.in  descriptorallocator.hpp  descriptorpool.hpp  descriptorsetlayout.hpp  descriptorsetlayoutbuilder.hpp  descriptorwriter.hpp  device.hpp  engine.hpp  exception.hpp  exceptions.hpp  fence.hpp  fwd.hpp  helpers.hpp  image.hpp  imageview.hpp  imgui.hpp  instance.hpp  material.hpp  pipeline.hpp  pipelinebuilder.hpp  rendergraph.hpp  renderpass.hpp  resourcemanager.hpp  sampler.hpp  scenegraph.hpp  sceneresources.hpp  semaphore.hpp  surface.hpp  swapchain.hpp  texture.hpp  texturesampler.hpp  vertex.hpp  vktypes.hpp  vulkan.hpp  window.hpp
include/eldr/vulkan/vktools/: format.hpp
include/eldr/vulkan/wrappers/: allocatedbuffer.hpp  buffer.hpp  commandbuffer.hpp  commandpool.hpp  debugutilsmessenger.hpp  descriptor.hpp  descriptorallocator.hpp  descriptorbuilder.hpp  descriptorpool.hpp  descriptorsetlayout.hpp  descriptorsetlayoutbuilder.hpp  descriptorwriter.hpp  device.hpp  fence.hpp  framebuffer.hpp  gpuresource.hpp  gputexture.hpp  image.hpp  imageview.hpp  instance.hpp  makeinfo.hpp  pipeline.hpp  pipelinebuilder.hpp  renderpass.hpp  sampler.hpp  semaphore.hpp  shader.hpp  surface.hpp  swapchain.hpp  texture.hpp  vkobject.hpp
include/gui/: gui.hpp  viewer.hpp  vulkan-backend.hpp
shaders/: frag.spv
src/: meson.build
src/app/: app.cpp  keyboardmouseinput.cpp  main.cpp  meson.build  scenemanager.cpp  window.cpp
src/core/: bitmap.cpp  dstream.cpp  exceptions.cpp  formatter.cpp  fstream.cpp  logger.cpp  meson.build  mstream.cpp  progress.cpp  stopwatch.cpp  stream.cpp  struct.cpp  thread.cpp  util.cpp
src/eldr/: app.cpp  eldr-app.cpp  eldr.cpp  main.cpp  meson.build
src/gui/: gui.cpp  meson.build  vulkan-backend.cpp  vulkan-wrapper.cpp  window.cpp
src/libgui/: gui.cpp  meson.build  viewer.cpp  vulkan-backend.cpp
src/render/: endpoint.cpp  mesh.cpp  meson.build  renderer.cpp  scene.cpp  vulkan-wrapper.cpp
src/shaders/: imgui.frag  imgui.vert  inputstructures.glsl  main.frag  main.vert  mesh.frag  mesh.vert  shader.frag  shader.vert
src/vulkan/: buffer.cpp  command.cpp  commandpool.cpp  descriptorallocator.cpp  descriptorpool.cpp  descriptorsetlayout.cpp  descriptorsetlayoutbuilder.cpp  descriptorwriter.cpp  device.cpp  engine.cpp  exceptions.cpp  fence.cpp  helpers.cpp  image.cpp  imageview.cpp  imgui.cpp  instance.cpp  material.cpp  meson.build  pipeline.cpp  pipelinebuilder.cpp  rendergraph.cpp  renderpass.cpp  resourcemanager.cpp  sampler.cpp  scenegraph.cpp  sceneresources.cpp  semaphore.cpp  surface.cpp  swapchain.cpp  texture.cpp  vertex.cpp  vktypes.cpp  vulkan.cpp
src/vulkan/vktools/: format.cpp
src/vulkan/wrappers/: buffer.cpp  commandbuffer.cpp  commandpool.cpp  debugutilsmessenger.cpp  descriptor.cpp  descriptorallocator.cpp  descriptorbuilder.cpp  descriptorpool.cpp  descriptorsetlayout.cpp  descriptorsetlayoutbuilder.cpp  descriptorwriter.cpp  device.cpp  fence.cpp  framebuffer.cpp  gputexture.cpp  image.cpp  imageview.cpp  instance.cpp  makeinfo.cpp  pipeline.cpp  pipelinebuilder.cpp  renderpass.cpp  sampler.cpp  semaphore.cpp  shader.cpp  surface.cpp  swapchain.cpp  texture.cpp  window.cpp
subprojects/: fastgltf.wrap  libxkbcommon.wrap  rapidobj.wrap
